# thunderbird-tray-icon

./: .clangd  CHANGELOG.md  LICENSE  README.md  main.cpp  main.hpp  meson.build  thunderbird-tray-icon.cabal  tokenizer.hpp
app/: Main.hs  Tokenizer.hs
include/mork/: alias.hpp  cell.hpp  dict.hpp  file.hpp  group.hpp  hex.hpp  metaDict.hpp  metaRow.hpp  metaTable.hpp  mid.hpp  name.hpp  row.hpp  rowRef.hpp  table.hpp  value.hpp
mork/: alias.hpp  cell.hpp  file.hpp  hex.hpp  metaRow.hpp  mid.hpp  rowRef.hpp  value.hpp
src/: main.cpp  meson.build  tokenizer.cpp
