cabal-version:      2.4
name:               thunderbird-tray-icon
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Vishnu Ranganath
license:            MIT
license-file:       LICENSE
maintainer:         vranganath20@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable thunderbird-tray-icon
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:      Tokenizer

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        split
    hs-source-dirs:   app
    default-language: Haskell2010
