proj_sources = [
  'main.cpp',
  'tokenizer.cpp',
  'mork/alias.cpp',
  'mork/cell.cpp',
  'mork/dict.cpp',
  'mork/file.cpp',
  'mork/group.cpp',
  'mork/hex.cpp',
  'mork/metaDict.cpp',
  'mork/metaRow.cpp',
  'mork/metaTable.cpp',
  'mork/mid.cpp',
  'mork/name.cpp',
  'mork/row.cpp',
  'mork/rowRef.cpp',
  'mork/table.cpp',
  'mork/value.cpp',
]

executable(
  'demo',
  proj_sources,
  include_directories: inc,
  dependencies: gtkdep,
)
